# ThreadFlow

./: .gitignore  README.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: ci-cd.yml  docker-image.yml  node.js.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts
frontend/src/app/: page.tsx
